# claudebase

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  install.ps1  install.sh
.claude/: release-notes-0.7.0.md  release-notes-0.8.0.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/configure/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  plugin-question.md
.github/workflows/: release.yml  spike-ipc.yml  spike-whisper-ci.yml
bench/: runner.rs
bench/golden/: README.md  queries.jsonl
bench/reports/: 2026-05-10-vector-vs-bm25-full.md  2026-05-10-vector-vs-bm25.md
commands/: consolidate.md
docs/: PRD.md  design.md  qa.md  use-cases.md
docs/architecture/: technical-decisions.md
docs/article/: 00-overview.md  01-claudebase-story.md
docs/benchmarks/: 2026-05-10-baseline.md
docs/design/: agent-insights-base.md
docs/issues/: 001-fts5-dot-syntax-in-insight-search.md  002-channel-surface-not-firing-2.1.144.md  003-installps1-utf8-bom-breaks-mcp-json.md  004-token-and-access-config-source-mismatch.md  005-insight-corpus-fragmented-across-nested-repos.md  006-bridge-delivery-shared-agent-id-stale-bridges.md  007-nvidia-parakeet-asr-backend.md
docs/plans/: agent-registry-multi-cli.md  claudebase-fleet-v0.9.md  claudebase-project-dir.md  claudebase-server-foundation.md  claudebase-v0.9-implementation-plan.md  claudebase-v0.9-product-plan.md  code-graph.md  multi-agent-telegram-on-v0.6.md  telegram-multi-cli-orchestration.md
docs/qa/: agent-chat-daemon_test_cases.md  agent-insights-base_test_cases.md  claudebase-v0.9-cut_test_cases.md  cli-to-cli-routing_test_cases.md  insights-hybrid-corpus_test_cases.md  multi-agent-telegram-on-v0.6_test_cases.md  telegram-multi-cli_smoke_runbook.md  telegram-multi-cli_test_cases.md
docs/qa/evidence/cli-to-cli-routing/: slice-7-preflight.txt
docs/qa/evidence/slice-0-baseline-v0.6/: README.md  plugin-stdout.jsonl
docs/use-cases/: agent-chat-daemon_use_cases.md  agent-insights-base_use_cases.md  claudebase-v0.9-cut_use_cases.md  cli-to-cli-routing_use_cases.md  insights-hybrid-corpus_use_cases.md  multi-agent-telegram-on-v0.6_use_cases.md  telegram-multi-cli_use_cases.md
hooks/: claudebase-agent-routing-reminder.ps1  claudebase-agent-routing-reminder.sh  claudebase-feature-describe.ps1  claudebase-feature-describe.sh  claudebase-insight-capture.ps1  claudebase-insight-capture.sh  claudebase-read-insights-reminder.ps1  claudebase-read-insights-reminder.sh  claudebase-selfcheck-reminder.ps1  claudebase-selfcheck-reminder.sh
plugins/telegram-rs/: Cargo.toml  NOTICE  README.md
plugins/telegram-rs/src/: main.rs  state.rs  whisper.rs
plugins/telegram-rs/src/access/: gate.rs  mod.rs  state.rs
plugins/telegram-rs/src/mcp/: mod.rs  notification.rs  permission.rs  protocol.rs  server.rs  tools.rs
plugins/telegram-rs/src/telegram/: api.rs  bot.rs  inbox.rs  mod.rs
prompts/agents/: consolidator.md  reflection.md
prompts/commands/: consolidate.md  knowledge-ingest.md  reflect.md  update-claudebase.md
prompts/rules/: cognitive-self-check.md  knowledge-base-tool.md  knowledge-base.md
skills/access/: SKILL.md
spikes/ipc_concurrent_accept/: Cargo.toml
spikes/ipc_concurrent_accept/src/: main.rs
src/: chunker.rs  cli.rs  encoder.rs  ingest.rs  lib.rs  main.rs  migrations.rs  ocr.rs  output.rs  parser.rs  pdf.rs  project_config.rs  project_id.rs  registry.rs  search.rs  store.rs  text.rs
src/daemon/: ASYNC_INVARIANTS.md  agent_registry.rs  channel_state.rs  chat.rs  config.rs  ipc.rs  mod.rs  pending_asks.rs  permissions.rs  server.rs  service.rs  telegram.rs
src/daemon/asr/: decoder.rs  mod.rs  whisper.rs
src/plugin/: bridge.rs  mcp.rs  mod.rs
tests/: agent_describe_test.rs  agent_dnd_test.rs  agent_registry_mcp_test.rs  agent_registry_v6_test.rs  agent_send_test.rs  asr_telegram_integration_test.rs  asr_trait_test.rs  async_invariants_doc.rs  bridge_agent_message_render_test.rs  channel_state_migration_test.rs  chat_ask_parity_test.rs  chat_broadcast_test.rs  chat_cli_test.rs  chat_schema_test.rs  chat_tools_e2e_test.rs  chunker_test.rs  cli_agent_list_alive_test.rs  cli_agent_routing_hook_test.rs  cli_feature_describe_hook_test.rs  cli_help_test.rs  cli_ingest_e2e_test.rs  cli_insight_create_routing_test.rs  cli_insight_dual_db_test.rs  cli_insight_e2e_test.rs  cli_insight_lifecycle_e2e_test.rs  cli_insight_tags_test.rs  cli_search_e2e_test.rs  corrupt_index_test.rs  daemon_config_test.rs  daemon_doctor_test.rs  daemon_single_instance.rs  daemon_smoke.rs  daemon_tracing_json.rs  decoder_ogg_opus_test.rs  e2e_routing.rs  encoder_test.rs  image_extraction_test.rs  ingest_test.rs  mcp_descriptor_test.rs  migration_test.rs  (+25 more)
tests/fixtures/: calibre-sample.README.md  sample-no-headings.md  sample-with-headings.md  sample.md  sample.txt  utf8-edge.md
tests/fixtures/sql-injection-name/: '; DROP TABLE documents; --.md
whisper-build-test/: Cargo.toml
whisper-build-test/src/: main.rs
