[package]
name = "claudebase"
version = "0.5.0"
edition = "2021"
description = "Local hybrid retrieval CLI for LLM agents — BM25 + dense embeddings + RRF, multimodal OCR, per-page navigation"
license = "MIT"
repository = "https://github.com/codefather-labs/claudebase"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Storage / FTS5 (bundled SQLite avoids platform divergence; vtab enables FTS5)
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }

# sqlite-vec extension (Slice 2 of vector-retrieval-backend) — adds the
# `vec0` virtual table for cosine-similarity K-NN search alongside FTS5 in
# the same `index.db`. Per architect OQ-2: load via `sqlite_vec::load(&conn)`
# helper (NOT bundled into rusqlite, NOT runtime `load_extension`).
sqlite-vec = "0.1"

# PDF text extraction (iter-2). Replaces `pdf-extract = "0.7"` per PRD §12 FR-2.1.
# Caret semver `"0.9"` allows 0.9.x patch updates but fences the major-bump
# (architect MINOR action item #3). Library binding uses the explicit-path
# entrypoint `Pdfium::bind_to_library(<absolute-path>)` per architect STRUCTURAL
# action item #1 — eliminates LD_LIBRARY_PATH/DYLD_LIBRARY_PATH hijack surface.
pdfium-render = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
# SECURITY: do NOT enable arbitrary_precision or unbounded_depth features.
# Slice 1b defense-in-depth — MCP plugin parses untrusted JSON from stdin
# and the default depth/precision caps are part of the threat model.
serde_json = "1"

# Hashing (content-hash dedupe in Slice 2)
sha2 = "0.10"

# Image encoding (Slice 4 of vector-retrieval-backend) — PNG encoding for
# figures extracted from PDFs via pdfium-render's `PdfBitmap::as_image`.
# pdfium-render itself depends on `image = 0.25` transitively (gated behind
# its `image_latest` feature flag, default-on); pinning it here as a direct
# dep makes `image::DynamicImage` and `image::ImageFormat::Png` importable
# from our code without relying on the renamed `image_025` package alias.
image = { version = "0.25", default-features = false, features = ["png"] }

# Embedding model runtime (Slice 5 of vector-retrieval-backend). fastembed-rs
# ships e5-multilingual-small + many other embedding models with a simple
# `TextEmbedding::try_new(InitOptions { model_name: ... })` API. ONNX runtime
# is loaded transitively via `ort` — per architect AI-3 we use load-dynamic
# (the runtime dylib is downloaded by install.sh, mirroring pdfium pattern)
# to keep the binary <10 MB.
fastembed = "5"

# Error plumbing
anyhow = "1"
thiserror = "1"
ocr-rs = "2.2.2"

# Slice 1a — agent-chat-daemon (UDS/named-pipe server + tokio runtime).
# Production deps mirroring the [dev-dependencies] entries the test-writer
# added; cargo unifies versions across both sections so the test binaries
# and library see the same crate graph. The `Daemon` and `Plugin` CLI arms
# are the ONLY callers of these deps (tokio runtime confined to those
# dispatch arms per src/main.rs INVARIANT comment).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "time", "sync"] }
interprocess = { version = "2", features = ["tokio"] }
fslock = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Slice 1a TDD integration tests: UDS/named-pipe server + concurrent accept
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync", "process"] }
interprocess = { version = "2", features = ["tokio"] }
serde_json = "1"
anyhow = "1"

# Unix-specific signal handling (SIGTERM in daemon_single_instance tests)
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27", features = ["signal"] }

[[bin]]
name = "claudebase-bench"
path = "bench/runner.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
