# Cargo workspace. The root crate is the `claudebase` CLI; plugins/ holds
# auxiliary binaries shipped alongside (telegram-rs etc.).
[workspace]
members = [".", "plugins/telegram-rs"]
resolver = "2"

[package]
name = "claudebase"
version = "0.8.0"
edition = "2021"
description = "Local hybrid retrieval CLI for LLM agents — BM25 + dense embeddings + RRF, multimodal OCR, per-page navigation"
license = "MIT"
repository = "https://github.com/codefather-labs/claudebase"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Storage / FTS5 (bundled SQLite avoids platform divergence; vtab enables FTS5)
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }

# sqlite-vec extension (Slice 2 of vector-retrieval-backend) — adds the
# `vec0` virtual table for cosine-similarity K-NN search alongside FTS5 in
# the same `index.db`. Per architect OQ-2: load via `sqlite_vec::load(&conn)`
# helper (NOT bundled into rusqlite, NOT runtime `load_extension`).
sqlite-vec = "0.1"

# PDF text extraction (iter-2). Replaces `pdf-extract = "0.7"` per PRD §12 FR-2.1.
# Caret semver `"0.9"` allows 0.9.x patch updates but fences the major-bump
# (architect MINOR action item #3). Library binding uses the explicit-path
# entrypoint `Pdfium::bind_to_library(<absolute-path>)` per architect STRUCTURAL
# action item #1 — eliminates LD_LIBRARY_PATH/DYLD_LIBRARY_PATH hijack surface.
pdfium-render = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
# SECURITY: do NOT enable arbitrary_precision or unbounded_depth features.
# Slice 1b defense-in-depth — MCP plugin parses untrusted JSON from stdin
# and the default depth/precision caps are part of the threat model.
serde_json = "1"

# Hashing (content-hash dedupe in Slice 2)
sha2 = "0.10"

# Image encoding (Slice 4 of vector-retrieval-backend) — PNG encoding for
# figures extracted from PDFs via pdfium-render's `PdfBitmap::as_image`.
# pdfium-render itself depends on `image = 0.25` transitively (gated behind
# its `image_latest` feature flag, default-on); pinning it here as a direct
# dep makes `image::DynamicImage` and `image::ImageFormat::Png` importable
# from our code without relying on the renamed `image_025` package alias.
image = { version = "0.25", default-features = false, features = ["png"] }

# Embedding model runtime (Slice 5 of vector-retrieval-backend). fastembed-rs
# ships e5-multilingual-small + many other embedding models with a simple
# `TextEmbedding::try_new(InitOptions { model_name: ... })` API. ONNX runtime
# is loaded transitively via `ort` — per architect AI-3 we use load-dynamic
# (the runtime dylib is downloaded by install.sh, mirroring pdfium pattern)
# to keep the binary <10 MB.
fastembed = "5"

# Error plumbing
anyhow = "1"
thiserror = "1"
ocr-rs = "2.2.2"

# Slice 1a — agent-chat-daemon (UDS/named-pipe server + tokio runtime).
# Production deps mirroring the [dev-dependencies] entries the test-writer
# added; cargo unifies versions across both sections so the test binaries
# and library see the same crate graph. The `Daemon` and `Plugin` CLI arms
# are the ONLY callers of these deps (tokio runtime confined to those
# dispatch arms per src/main.rs INVARIANT comment).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "time", "sync"] }
interprocess = { version = "2", features = ["tokio"] }
fslock = "0.2"
uuid = { version = "1", features = ["v4"] }

# Slice 1c — structured JSON logging for daemon + plugin dispatch arms.
# fmt::json + env-filter cover the canonical stdlib RUST_LOG semantics.
# Subscriber init is confined to run_daemon_serve / run_plugin_serve so
# sync subcommands stay unaffected. See src/daemon/ASYNC_INVARIANTS.md.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Slice 4 — agent-chat-daemon Telegram bot integration.
# teloxide 0.17 is the current stable release (task spec said "0.13" but the
# latest published version on crates.io as of this commit is 0.17.0 —
# verified via `cargo search teloxide`). default-features=false to avoid
# pulling sqlx + dialogue + macros we don't need; we only consume the bare
# Bot client + getUpdates long-poll surface.
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler"] }

# Slice 4 — daemon.toml + secrets.toml loaders.
toml = "0.8"

# Slice 4 — OS-CSPRNG seed for pairing codes (SEC-11). getrandom 0.2 is the
# stable line; 0.3 exists but propagates breaking-API churn we don't need.
getrandom = "0.2"

# Slice 7.x — hex encoding for the 1:1 official-telegram-plugin port of
# pairing codes (server.ts:256 `randomBytes(3).toString('hex')`). Lightweight,
# no transitive deps beyond core.
hex = "0.4"

# Slice 7.x — ISO 8601 timestamp formatting in the channel notification
# `meta.ts` field (server.ts:1271
# `new Date(date*1000).toISOString()`). Default features pulled in
# transitively via teloxide already — explicit dep avoids divergence.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Slice 4 — Url::parse for TELOXIDE_API_URL override (test/mock hook).
# Same version teloxide → reqwest transitively pin so cargo unifies on one.
url = "2"

# Slice 6-MVP — ASR pipeline deps.
#
# `async-trait` — type-erasure for async trait methods. The `Asr` trait
# in src/daemon/asr/mod.rs returns Pin<Box<dyn Future + Send>> via the
# macro so `dyn Asr` is object-safe AND auto-Send-bound at the trait
# boundary. One heap allocation per `transcribe` call — acceptable for a
# call that runs once per voice note (~30s interval).
async-trait = "0.1"
#
# Opus codec — pure-Rust decoder, RFC 8251 conformant, no FFI. Telegram
# voice notes are always Opus-in-Ogg per Telegram Bot API spec. Picked
# over the `opus = "0.3"` C-binding crate to keep the single-binary
# contract intact (architect insight #10 — the v1 plan-bug fix).
opus-decoder = "0.1"
#
# Ogg container parser — pure Rust. Pairs with `opus-decoder` to read
# packetized Opus frames out of the .ogg container Telegram returns.
ogg = "0.9"
#
# Sample-rate conversion (48 kHz → 16 kHz) is implemented in-house via
# linear interpolation in `src/daemon/asr/decoder.rs` — keeps the dep
# tree lean (rubato pulls realfft + transpose + primal-check at ~50KB+
# compiled) and the quality is ample for whisper ASR (whisper itself
# applies a 80-channel mel-spectrogram preprocessing pipeline that
# dwarfs any artefacts a linear resampler introduces). When a future
# slice needs higher-fidelity resampling (TTS, audio mastering, etc.)
# rubato can be added back behind a feature gate.

# Slice 6-MVP — whisper-rs local ASR backend, opt-in via `--features
# asr-whisper`. Whisper-rs depends on libwhisper.cpp (cmake build);
# enabling it pulls a ~2-3 minute first-build cost. NOT in the default
# feature set: developers and CI keep the fast-build baseline; turn the
# feature on when running ASR e2e tests OR when shipping a release.
# When the feature is OFF, the `make_asr("whisper")` factory bails with
# a runtime "asr-whisper feature not compiled in" error per PRD
# FR-ACD-7.4 (stubs always compile; runtime errors over panics).
whisper-rs = { version = "0.16", optional = true }

# Slice 6-MVP — model-file SHA256 verification + interruptible download.
# `reqwest` is already pulled transitively by teloxide; expose it as a
# direct dep so the model-download path can use the blocking client
# without depending on teloxide internals.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }

# Slice 2 — Windows Service install/uninstall/lifecycle via the
# `windows-service` crate. Gated behind `cfg(windows)` so the build graph
# stays clean on Linux / macOS — the dep is not even resolved on
# non-Windows targets. Version `0.8` is the latest stable as of slice
# authoring (verified via `cargo search windows-service` 2026-05-18).
[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[features]
# Slice 6-MVP — ASR backend features. `asr-whisper` enables the local
# whisper-rs backend; `asr-sherpa` and `asr-nim` are reserved for future
# slices (Wave 6 per plan.md). All three are runtime-selectable from
# `daemon.toml`; the factory in `src/daemon/asr/mod.rs::make_asr` returns
# clean Err strings when the requested backend's feature is absent.
#
# IMPORTANT: `asr-whisper` is INTENTIONALLY NOT a default feature so that
# `cargo build` / `cargo test` stay fast for non-ASR work. Enable
# explicitly via `cargo build --features asr-whisper` when shipping the
# Telegram-voice-note pipeline. See `### Inbound validation` push-back
# in the Slice 6-MVP commit message for the rationale (the spawn prompt
# proposed `default = ["asr-whisper"]`; that would regress every
# non-ASR-bearing CI run with a ~2-3 minute whisper.cpp compile).
default = []
asr-whisper = ["dep:whisper-rs"]
asr-sherpa = []
asr-nim = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Slice 1a TDD integration tests: UDS/named-pipe server + concurrent accept
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync", "process"] }
interprocess = { version = "2", features = ["tokio"] }
serde_json = "1"
anyhow = "1"

# Slice 4 TDD integration tests: Telegram mock + e2e roundtrip
httpmock = "0.7"

# Unix-specific signal handling (SIGTERM in daemon_single_instance tests)
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27", features = ["signal"] }

[[bin]]
name = "claudebase-bench"
path = "bench/runner.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
