[package]
name = "ipc-concurrent-accept-spike"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone spike crate (NOT in the claudebase workspace).
# Verifies that `interprocess` v2 handles 2 concurrent connections cleanly on
# Linux UDS, macOS UDS, AND Windows named pipes — gates Slice 1a IPC choice.
#
# Living outside the main Cargo.toml dev-dependencies avoids the cold-CI-build
# trap where pulling claudebase's full dep tree (pdfium, image, fastembed,
# ocr-rs, ...) blows past CI step timeouts before the spike binary even
# starts.

[dependencies]
interprocess = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[[bin]]
name = "ipc-concurrent-accept-spike"
path = "src/main.rs"
